--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div>
 <h1>wolfprivacy.com</h1>
 <p>
-a blog & consultant for QubesOS, GrapheneOS and privacy
+a blog about QubesOS, GrapheneOS and privacy
 </p>
 </div>
 </body>
